--- a/subdivision_shader/subdivision_shader.vcxproj
+++ b/subdivision_shader/subdivision_shader.vcxproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\frag.glsl" />
+    <None Include="shaders\geometry.glsl" />
     <None Include="shaders\tess.control.glsl" />
     <None Include="shaders\tess.eval.glsl" />
     <None Include="shaders\vert.glsl" />
