--- a/subdivision_shader/subdivision_shader.vcxproj.filters
+++ b/subdivision_shader/subdivision_shader.vcxproj.filters
@@ -55,5 +55,8 @@
     <None Include="shaders\tess.eval.glsl">
       <Filter>Resource Files</Filter>
     </None>
+    <None Include="shaders\geometry.glsl">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
